--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -94,27 +94,120 @@
    ],
    "source": [
     "#build a dataframe from joining two csv\n",
+    "\n",
+    "# 1. build an empty dataframe\n",
+    "#date_range function \n",
+    "#define the date range\n",
     "start_date = '2020-02-01'\n",
     "end_date = '2020-03-01'\n",
-    "dates = pd.date_range(start_date, end_date)\n",
+    "dates = pd.date_range(start_date, end_date) #start and end\n",
     "print(dates)\n",
     "\n",
-    "#datetime index object: \n",
+    "#datetime index object: (a list of)\n",
     "print(dates[0])\n",
     "\n",
+    "#index as dates\n",
     "df1=pd.DataFrame(index=dates)\n",
     "print(df1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Date        Open        High         Low       Close   Adj Close  \\\n",
+      "0    2019-08-07  284.399994  288.820007  282.040009  287.970001  282.333954   \n",
+      "1    2019-08-08  289.619995  293.619995  289.010010  293.619995  287.873322   \n",
+      "2    2019-08-09  292.579987  293.239990  289.649994  291.619995  285.912476   \n",
+      "3    2019-08-12  289.959991  291.609985  287.019989  288.070007  282.432007   \n",
+      "4    2019-08-13  287.739990  294.149994  287.359985  292.549988  286.824280   \n",
+      "..          ...         ...         ...         ...         ...         ...   \n",
+      "248  2020-07-31  325.899994  326.630005  321.329987  326.519989  326.519989   \n",
+      "249  2020-08-03  328.320007  329.619995  327.730011  328.790009  328.790009   \n",
+      "250  2020-08-04  327.859985  330.059998  327.859985  330.059998  330.059998   \n",
+      "251  2020-08-05  331.470001  332.390015  331.179993  332.109985  332.109985   \n",
+      "252  2020-08-06  331.480011  332.635010  331.130005  332.119995  332.119995   \n",
+      "\n",
+      "        Volume  \n",
+      "0    140572300  \n",
+      "1     87713900  \n",
+      "2     93730000  \n",
+      "3     62629500  \n",
+      "4     94299800  \n",
+      "..         ...  \n",
+      "248   85210800  \n",
+      "249   53077900  \n",
+      "250   41917900  \n",
+      "251   42697700  \n",
+      "252   17828322  \n",
+      "\n",
+      "[253 rows x 7 columns]\n",
+      "dfspy has index of 0 to ...\n",
+      "need to fomulate the read_csv: the date as the index\n",
+      "parse_date: make the time indexing object present\n",
+      "usecols: trim the column needed\n",
+      "na_values: csv has NaN as STRING\n",
+      "tell the csv that NaN should not interpreted as numbers\n",
+      "                     S   Adj Close\n",
+      "2020-02-01         NaN         NaN\n",
+      "2020-02-02         NaN         NaN\n",
+      "2020-02-03  320.813446  320.813446\n",
+      "2020-02-04  325.703064  325.703064\n",
+      "2020-02-05  329.464294  329.464294\n",
+      "2020-02-06  330.572876  330.572876\n",
+      "2020-02-07  328.811035  328.811035\n",
+      "2020-02-08         NaN         NaN\n",
+      "2020-02-09         NaN         NaN\n",
+      "2020-02-10  331.265717  331.265717\n",
+      "2020-02-11  331.839813  331.839813\n",
+      "2020-02-12  333.977783  333.977783\n",
+      "2020-02-13  333.621429  333.621429\n",
+      "2020-02-14  334.155945  334.155945\n",
+      "2020-02-15         NaN         NaN\n",
+      "2020-02-16         NaN         NaN\n",
+      "2020-02-17         NaN         NaN\n",
+      "2020-02-18  333.294800  333.294800\n",
+      "2020-02-19  334.888397  334.888397\n",
+      "2020-02-20  333.512573  333.512573\n",
+      "2020-02-21  330.077972  330.077972\n",
+      "2020-02-22         NaN         NaN\n",
+      "2020-02-23         NaN         NaN\n",
+      "2020-02-24  319.130829  319.130829\n",
+      "2020-02-25  309.460449  309.460449\n",
+      "2020-02-26  308.322205  308.322205\n",
+      "2020-02-27  294.474915  294.474915\n",
+      "2020-02-28  293.237701  293.237701\n",
+      "2020-02-29         NaN         NaN\n",
+      "2020-03-01         NaN         NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "# dspy = pd.read_csv(\"SPY.csv\")\n",
-    "# df1 = df1.join(dspy)\n",
-    "# print(df1.head())"
+    "#combine the empty dataframe and dfSPY\n",
+    "#join function \n",
+    "#a.join(b)\n",
+    "#a is base, all index in a will be in the new df\n",
+    "#index in b, which is also presented in a will be in the new df\n",
+    "#remaining row: nans\n",
+    "dfSPY = pd.read_csv(\"SPY.csv\")\n",
+    "print(dfSPY)\n",
+    "print(\"dfspy has index of 0 to ...\")\n",
+    "print(\"need to fomulate the read_csv: the date as the index\")\n",
+    "print(\"parse_date: make the time indexing object present\")\n",
+    "print(\"usecols: trim the column needed\")\n",
+    "print(\"na_values: csv has NaN as STRING\")\n",
+    "print(\"tell the csv that NaN should not interpreted as numbers\")\n",
+    "\n",
+    "\n",
+    "dfSPY=pd.read_csv(\"SPY.csv\",index_col=\"Date\",parse_dates=True,usecols=['Date'], na_values=['nan'])\n",
+    "df1=df1.join(dfSPY)\n",
+    "df1.dropna()\n",
+    "print(df1)"
    ]
   },
   {
