--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +327,7 @@
     "\n",
     "def test_run():\n",
     "    # Define a date range\n",
+    "    sd,ed = '2020-01-30', '2020-07-30'\n",
     "    dates = pd.date_range('2020-01-30', '2020-07-30')\n",
     "\n",
     "    # Choose stock symbols to read\n",
@@ -341,11 +342,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = pd.date_range('2020-01-01', '2020-01-31')\n",
+    "\n",
+    "symbols = ['AAPL', 'MFT', 'TSLA']  # SPY will be added in get_data()\n",
+    "\n",
+    "df = get_data(symbols, dates)\n",
+    "\n",
+    "sd,ed = '2020-01-01','2020-01-31'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Row Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   SPY        AAPL        MFT        TSLA\n",
+      "2020-01-02  321.555786  298.292145  13.218055  430.260010\n",
+      "2020-01-03  319.120911  295.392120  13.159697  443.010010\n",
+      "2020-01-06  320.338379  297.745880  13.227781  451.540009\n",
+      "2020-01-07  319.437653  296.345581  13.325044  469.059998\n",
+      "2020-01-08  321.140106  301.112640  13.354221  492.140015\n",
+      "\n",
+      "                   SPY        AAPL        MFT        TSLA\n",
+      "2020-01-02  321.555786  298.292145  13.218055  430.260010\n",
+      "2020-01-03  319.120911  295.392120  13.159697  443.010010\n",
+      "2020-01-06  320.338379  297.745880  13.227781  451.540009\n",
+      "2020-01-07  319.437653  296.345581  13.325044  469.059998\n",
+      "2020-01-08  321.140106  301.112640  13.354221  492.140015\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.loc[sd:ed].head()) #more pythonic?\n",
+    "print()\n",
+    "print(df[sd:ed].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  TSLA        MFT\n",
+      "2020-01-02  430.260010  13.218055\n",
+      "2020-01-03  443.010010  13.159697\n",
+      "2020-01-06  451.540009  13.227781\n",
+      "2020-01-07  469.059998  13.325044\n",
+      "2020-01-08  492.140015  13.354221\n",
+      "\n",
+      "                  TSLA        MFT\n",
+      "2020-01-02  430.260010  13.218055\n",
+      "2020-01-03  443.010010  13.159697\n",
+      "2020-01-06  451.540009  13.227781\n",
+      "2020-01-07  469.059998  13.325044\n",
+      "2020-01-08  492.140015  13.354221\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"ROW + Column Slicing\"\"\"\n",
+    "print(df.loc[sd:ed][['TSLA','MFT']].head()) #more pythonic?\n",
+    "print()\n",
+    "print(df[sd:ed][['TSLA','MFT']].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ploting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Normalize the data so they all start at 1.0\"\"\"\n",
+    "\"\"\"df = df / df.ix[0] (Lower level)\n",
+    "df = df / df.ix[0, :]\"\"\"\n"
+   ]
   }
  ],
  "metadata": {
